# obs-live-interpreter

./: .gitignore  CLAUDE.md  README.md  requirements.txt
.github/workflows/: build-project.yaml  push.yaml
docs/: DEVELOPMENT.md
plugin/: CMakeLists.txt  buildspec.json
plugin/cmake/windows/resources/: installer-windows.iss
plugin/data/locale/: en-US.ini  ko-KR.ini
plugin/src/: interpreter-control.hpp  interpreter-dock.cpp  interpreter-dock.hpp  interpreter-engine.cpp  interpreter-engine.hpp  plugin-main.cpp
prototype/: README.md
server/: .env.example  .railwayignore  README.md  app.py  fake_plugin.py  session_manager.py  voice.py
server/static/: index.html
